--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.node.network.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.node.network.default.yml
@@ -11,7 +11,7 @@ dependencies:
     - field.field.node.network.field_network
     - field.field.node.network.field_network_similar_networks
     - field.field.node.network.field_order_position
-    - image.style.thumbnail
+    - image.style.network__markets_map__canvas
     - node.type.network
   module:
     - field_group
@@ -101,16 +101,16 @@ content:
   field_image:
     weight: 4
     settings:
+      preview_image_style: network__markets_map__canvas
       progress_indicator: throbber
-      preview_image_style: thumbnail
     third_party_settings: {  }
     type: image_image
     region: content
   field_image2:
     weight: 5
     settings:
+      preview_image_style: network__markets_map__canvas
       progress_indicator: throbber
-      preview_image_style: thumbnail
     third_party_settings: {  }
     type: image_image
     region: content
