--- a/source/drupal/var/drupal-config/sync/core.extension.yml
+++ b/source/drupal/var/drupal-config/sync/core.extension.yml
@@ -22,9 +22,13 @@ module:
   field_group: 0
   field_ui: 0
   file: 0
+  file_mdm: 0
+  file_mdm_exif: 0
+  file_mdm_font: 0
   filter: 0
   help: 0
   image: 0
+  image_effects: 0
   imagick: 0
   inline_entity_form: 0
   jquery_colorpicker: 0
