Changed partners logos field to images

--- a/source/drupal/composer.json
+++ b/source/drupal/composer.json
@@ -62,7 +62,8 @@
         "drupal/migrate_plus": "^4.0",
         "drupal/migrate_tools": "4.x-dev",
         "drupal/migrate_source_csv": "^2.1",
-        "drupal/image_effects": "^2.0"
+        "drupal/image_effects": "^2.0",
+        "drupal/media_entity_image": "^1.2"
     },
     "repositories": {
         "mediamonks-drupal-decoupled": {
