--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.node.market.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.node.market.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.images
     - field.field.node.market.field_market_ages_18_24
     - field.field.node.market.field_market_ages_25_34
     - field.field.node.market.field_market_ages_35_44
@@ -42,6 +43,7 @@ dependencies:
     - image.style.thumbnail
     - node.type.market
   module:
+    - entity_browser
     - field_group
     - image
     - path
@@ -67,7 +69,7 @@ third_party_settings:
         - field_market_state_code
         - group_dma
         - group_statistic
-        - group_partners_logos
+        - field_market_partners_logos
         - group_media_kit
       parent_name: group_markets_tabs
       weight: 6
@@ -142,18 +144,6 @@ third_party_settings:
         open: false
         required_fields: true
       label: Statistic
-    group_partners_logos:
-      children:
-        - field_market_partners_logos
-      parent_name: group_market
-      weight: 5
-      format_type: details
-      format_settings:
-        id: ''
-        classes: ''
-        open: false
-        required_fields: true
-      label: 'Partners Logos'
     group_media_kit:
       children:
         - field_market_media_kit
@@ -506,13 +496,17 @@ content:
     type: number
     region: content
   field_market_partners_logos:
-    weight: 51
+    weight: 5
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      entity_browser: images
+      field_widget_display: label
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      open: false
+      field_widget_display_settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: entity_browser_entity_reference
     region: content
   field_market_state_code:
     weight: 2
