--- a/source/drupal/var/drupal-config/sync/core.extension.yml
+++ b/source/drupal/var/drupal-config/sync/core.extension.yml
@@ -34,6 +34,7 @@ module:
   jquery_colorpicker: 0
   link: 0
   media_entity: 0
+  media_entity_image: 0
   media_entity_video: 0
   menu_ui: 0
   metatag: 0
@@ -71,7 +72,6 @@ module:
   spectrum_twitter_api: 0
   sqlsrv: 0
   statistics: 0
-  supercache: 0
   system: 0
   taxonomy: 0
   text: 0
