--- a/source/drupal/var/drupal-config/sync/field.storage.node.field_market_partners_logos.yml
+++ b/source/drupal/var/drupal-config/sync/field.storage.node.field_market_partners_logos.yml
@@ -1,19 +1,19 @@
-uuid: b13b9412-2cee-48d1-99b3-d9ab919a4bf1
+uuid: e55f5555-194f-4078-a880-3c9eef964217
 langcode: en
 status: true
 dependencies:
   module:
+    - media_entity
     - node
-    - spectrum_shows
 id: node.field_market_partners_logos
 field_name: field_market_partners_logos
 entity_type: node
 type: entity_reference
 settings:
-  target_type: network
+  target_type: media
 module: core
 locked: false
-cardinality: -1
+cardinality: 1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
