--- a/source/drupal/docroot/modules/custom/spectrum_markets_map/config/install/migrate_plus.migration.markets.yml
+++ b/source/drupal/docroot/modules/custom/spectrum_markets_map/config/install/migrate_plus.migration.markets.yml
@@ -32,7 +32,7 @@ source:
     7:
       States: 'States'
     8:
-      partners_logo1: 'Partners logos'
+      partners_logos: 'Partners logos'
     9:
       Mediakit: 'Media Kit'
     10:
@@ -112,20 +112,11 @@ process:
     source: DMAvideo
     message: 'Field field_name is missing'
 
-  field_market_partners_logos:
-    -
-      plugin: skip_on_empty_null
-      method: process
-      source: partners_logos
-      message: 'Field field_name is missing'
-    -
-      plugin: explode
-      source: partners_logos
-      delimiter: ','
-    -
-      plugin: migration_lookup
-      no_stub: true
-      migration: network
+  field_market_partners_logos/target_id:
+    plugin: skip_on_empty_null
+    method: process
+    source: partners_logos
+    message: 'Field field_name is missing'
 
   field_market_households:
     -
