--- a/source/drupal/var/drupal-config/sync/image.style.network__markets_map__canvas.yml
+++ b/source/drupal/var/drupal-config/sync/image.style.network__markets_map__canvas.yml
@@ -12,7 +12,7 @@ effects:
     id: image_define_canvas
     weight: -9
     data:
-      HEX: '#FFFFFF'
+      HEX: '#FFF'
       under: 1
       exact_measurements: 1
       exact:
