--- a/source/drupal/composer.json
+++ b/source/drupal/composer.json
@@ -19,37 +19,37 @@
     "require": {
         "composer/installers": "^1.0.20",
         "cweagans/composer-patches": "~1.0",
-        "drupal/core": "~8.4",
+        "drupal/core": "~8.5",
         "drush/drush": "~8.1",
         "drupal/menu_admin_per_menu": "^1.0",
-        "drupal/metatag": "1.0",
-        "drupal/paragraphs": "dev-1.x#fa525bd",
-        "drupal/restui": "1.13",
-        "drupal/search_api": "1.0-beta3",
+        "drupal/metatag": "^1.5",
+        "drupal/paragraphs": "^1.2",
+        "drupal/restui": "^1.1",
+        "drupal/search_api": "^1.8",
         "drupal/search_api_solr": "1.0-beta1",
-        "drupal/token": "1.0-beta2",
+        "drupal/token": "^1.1",
         "mediamonks/mm_rest": "1.0-alpha4",
         "mediamonks/mm_slug": "1.0-alpha4",
         "mediamonks/mm_decoupled": "^1.0",
         "mediamonks/mm_prerender": "dev-develop",
         "mediamonks/mm_release_tracker": "^1.0",
         "mediamonks/mm_gaia": "^1.0",
-        "drupal/facets": "1.0-alpha7",
-        "drupal/admin_toolbar": "1.18",
-        "drupal/video_embed_field": "1.4",
-        "drupal/field_group": "1.0-rc6",
-        "drupal/jquery_colorpicker": "1.0-rc2",
+        "drupal/facets": "^1.0",
+        "drupal/admin_toolbar": "^1.23",
+        "drupal/video_embed_field": "^2.0",
+        "drupal/field_group": "^1.0",
+        "drupal/jquery_colorpicker": "^1.4",
         "drupal/sqlsrv": "1.0-rc4",
         "david/mssql": "dev-master",
-        "drupal/color_field": "2.0-rc1",
-        "drupal/toolbar_menu": "1.3",
-        "drupal/pathauto": "1.0-rc1",
-        "drupal/imagick": "1.0",
-        "drupal/entity": "1.0-alpha4",
-        "drupal/entity_browser": "1.0-rc2",
+        "drupal/color_field": "^2.0",
+        "drupal/toolbar_menu": "^2.1",
+        "drupal/pathauto": "^1.2",
+        "drupal/imagick": "^1.1",
+        "drupal/entity": "^1.0",
+        "drupal/entity_browser": "^1.4",
         "drupal/inline_entity_form": "1.0-beta1",
-        "drupal/media_entity": "1.6",
-        "drupal/media_entity_video": "1.0-beta1",
+        "drupal/media_entity": "^1.7",
+        "drupal/media_entity_video": "^1.0",
         "drupal/flysystem_s3": "^1.0@alpha",
         "drupal/cdn": "^3.0",
         "drupal/purge": "^3.0@beta",
@@ -57,13 +57,13 @@
         "drupal/varnish_purge": "^1.5",
         "drupal/wincachedrupal": "^1.11",
         "drupal/xmlsitemap": "^1.0@alpha",
-        "drupal/config_split": "^1.2",
+        "drupal/config_split": "^1.3",
         "drupal/console": "~1.0",
         "drupal/migrate_plus": "^4.0",
         "drupal/migrate_tools": "4.x-dev",
         "drupal/migrate_source_csv": "^2.1",
-        "drupal/image_effects": "^2.0",
-        "drupal/media_entity_image": "^1.2"
+        "drupal/image_effects": "^2",
+        "drupal/media_entity_image": "^1.3"
     },
     "repositories": {
         "mediamonks-drupal-decoupled": {
