--- a/source/drupal/var/drupal-config/sync/migrate_plus.migration.shows.yml
+++ b/source/drupal/var/drupal-config/sync/migrate_plus.migration.shows.yml
@@ -26,6 +26,10 @@ source:
       label: 'Show Id'
       selector: ShowId
     -
+      name: tms_id
+      label: 'Tms Id'
+      selector: TmsId
+    -
       name: MediaType
       label: MediaType
       selector: MediaType
@@ -62,14 +66,14 @@ source:
       label: Recommends
       selector: Recommend
   ids:
-    show_id:
+    tms_id:
       type: string
 process:
   type:
     plugin: default_value
     default_value: show
   title: title
-  field_show_id: show_id
+  field_show_id: tms_id
   field_show_media_type:
     plugin: entity_generate
     source: MediaType
