--- a/source/drupal/var/drupal-config/sync/rest.resource.spin_rest_init_v1.yml
+++ b/source/drupal/var/drupal-config/sync/rest.resource.spin_rest_init_v1.yml
@@ -8,10 +8,11 @@ dependencies:
     - user
 id: spin_rest_init_v1
 plugin_id: spin_rest_init_v1
-granularity: method
+granularity: resource
 configuration:
-  GET:
-    supported_formats:
-      - json
-    supported_auth:
-      - cookie
+  methods:
+    - GET
+  formats:
+    - json
+  authentication:
+    - cookie
