--- a/source/drupal/var/drupal-config/sync/search_api.index.articles.yml
+++ b/source/drupal/var/drupal-config/sync/search_api.index.articles.yml
@@ -95,51 +95,35 @@ field_settings:
     property_path: created
     type: date
 processor_settings:
-  add_url:
-    plugin_id: add_url
-    settings: {  }
-  rendered_item:
-    plugin_id: rendered_item
-    settings: {  }
+  add_url: {  }
+  rendered_item: {  }
   ignorecase:
-    plugin_id: ignorecase
-    settings:
-      fields:
-        - rendered_item
-        - category
-        - document_type
-        - market
-        - platform
-      weights:
-        preprocess_index: -10
-        preprocess_query: -10
-  aggregated_field:
-    plugin_id: aggregated_field
-    settings: {  }
-  node_status:
-    plugin_id: node_status
-    settings: {  }
+    fields:
+      - rendered_item
+      - category
+      - document_type
+      - market
+      - platform
+    weights:
+      preprocess_index: -10
+      preprocess_query: -10
+  aggregated_field: {  }
   content_access:
-    plugin_id: content_access
-    settings:
-      weights:
-        preprocess_query: -10
+    weights:
+      preprocess_query: -10
+  entity_status: {  }
 options:
   index_directly: true
   cron_limit: 50
 datasource_settings:
   'entity:node':
-    plugin_id: 'entity:node'
-    settings:
-      bundles:
-        default: false
-        selected:
-          - article
-      languages:
-        default: true
-        selected: {  }
+    bundles:
+      default: false
+      selected:
+        - article
+    languages:
+      default: true
+      selected: {  }
 tracker_settings:
-  default:
-    plugin_id: default
-    settings: {  }
+  default: {  }
 server: database
