--- a/source/drupal/var/drupal-config/sync/search_api.index.pages.yml
+++ b/source/drupal/var/drupal-config/sync/search_api.index.pages.yml
@@ -50,96 +50,74 @@ field_settings:
     type: integer
 processor_settings:
   content_access:
-    plugin_id: content_access
-    settings:
-      weights:
-        preprocess_query: -10
+    weights:
+      preprocess_query: -10
   transliteration:
-    plugin_id: transliteration
-    settings:
-      fields:
-        - rendered_item
-      weights:
-        preprocess_index: -10
-        preprocess_query: -10
+    fields:
+      - rendered_item
+    weights:
+      preprocess_index: -10
+      preprocess_query: -10
   ignorecase:
-    plugin_id: ignorecase
-    settings:
-      fields:
-        - rendered_item
-      weights:
-        preprocess_index: -10
-        preprocess_query: -10
-  aggregated_field:
-    plugin_id: aggregated_field
-    settings: {  }
-  rendered_item:
-    plugin_id: rendered_item
-    settings: {  }
-  node_status:
-    plugin_id: node_status
-    settings: {  }
+    fields:
+      - rendered_item
+    weights:
+      preprocess_index: -10
+      preprocess_query: -10
+  aggregated_field: {  }
+  rendered_item: {  }
   tokenizer:
-    plugin_id: tokenizer
-    settings:
-      fields:
-        - rendered_item
-      spaces: ''
-      overlap_cjk: 1
-      minimum_word_size: '3'
-      weights:
-        preprocess_index: -6
-        preprocess_query: -6
-  add_url:
-    plugin_id: add_url
-    settings: {  }
+    fields:
+      - rendered_item
+    spaces: ''
+    overlap_cjk: 1
+    minimum_word_size: '3'
+    weights:
+      preprocess_index: -6
+      preprocess_query: -6
+  add_url: {  }
   ignore_character:
-    plugin_id: ignore_character
-    settings:
-      fields:
-        - rendered_item
-      ignorable: '[''¿¡!?,.:;]'
-      strip:
-        character_sets:
-          Pc: Pc
-          Pd: Pd
-          Pe: Pe
-          Pf: Pf
-          Pi: Pi
-          Po: Po
-          Ps: Ps
-          Cc: 0
-          Cf: 0
-          Co: 0
-          Mc: 0
-          Me: 0
-          Mn: 0
-          Sc: 0
-          Sk: 0
-          Sm: 0
-          So: 0
-          Zl: 0
-          Zp: 0
-          Zs: 0
-      weights:
-        preprocess_index: -10
-        preprocess_query: -10
+    fields:
+      - rendered_item
+    ignorable: '[''¿¡!?,.:;]'
+    strip:
+      character_sets:
+        Pc: Pc
+        Pd: Pd
+        Pe: Pe
+        Pf: Pf
+        Pi: Pi
+        Po: Po
+        Ps: Ps
+        Cc: 0
+        Cf: 0
+        Co: 0
+        Mc: 0
+        Me: 0
+        Mn: 0
+        Sc: 0
+        Sk: 0
+        Sm: 0
+        So: 0
+        Zl: 0
+        Zp: 0
+        Zs: 0
+    weights:
+      preprocess_index: -10
+      preprocess_query: -10
+  entity_status: {  }
 options:
   index_directly: true
   cron_limit: 50
 datasource_settings:
   'entity:node':
-    plugin_id: 'entity:node'
-    settings:
-      bundles:
-        default: false
-        selected:
-          - page
-      languages:
-        default: true
-        selected: {  }
+    bundles:
+      default: false
+      selected:
+        - page
+    languages:
+      default: true
+      selected: {  }
 tracker_settings:
-  default:
-    plugin_id: default
-    settings: {  }
+  default: {  }
 server: database
