--- a/source/drupal/var/drupal-config/sync/search_api.index.networks.yml
+++ b/source/drupal/var/drupal-config/sync/search_api.index.networks.yml
@@ -32,14 +32,6 @@ field_settings:
     datasource_id: 'entity:node'
     property_path: title
     type: string
-processor_settings:
-  order_position: {  }
-  add_url: {  }
-  rendered_item: {  }
-  aggregated_field: {  }
-options:
-  index_directly: true
-  cron_limit: 50
 datasource_settings:
   'entity:node':
     bundles:
@@ -49,6 +41,16 @@ datasource_settings:
     languages:
       default: true
       selected: {  }
+processor_settings:
+  order_position: {  }
+  add_url: {  }
+  rendered_item: {  }
+  aggregated_field: {  }
+  entity_status: {  }
 tracker_settings:
-  default: {  }
+  default:
+    indexing_order: fifo
+options:
+  index_directly: true
+  cron_limit: 50
 server: database
