--- a/source/drupal/var/drupal-config/sync/core.entity_view_display.node.market.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_view_display.node.market.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.market.field_market_ages_55_64
     - field.field.node.market.field_market_ages_65_plus
     - field.field.node.market.field_market_ages_lower_18
+    - field.field.node.market.field_market_credits
     - field.field.node.market.field_market_demog_composition
     - field.field.node.market.field_market_devices_desktop
     - field.field.node.market.field_market_devices_smartphone
@@ -111,6 +112,14 @@ content:
       prefix_suffix: true
     third_party_settings: {  }
     type: number_integer
+    region: content
+  field_market_credits:
+    weight: 150
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_market_demog_composition:
     weight: 111
