--- a/tools/docker/.env
+++ b/tools/docker/.env
@@ -17,6 +17,8 @@ MARIADB_TAG=10.2-3.1.3
 ### --- PHP ----
 
 PHP_TAG=7.1-dev-4.2.5
+LINES="`tput lines`"
+COLUMNS="`tput cols`"
 
 ### --- NGINX ----
 ### [DRUPAL_VERSION]-[NGINX_VERSION]-[STABILITY_TAG]
