--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.node.market.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.node.market.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.market.field_market_ages_55_64
     - field.field.node.market.field_market_ages_65_plus
     - field.field.node.market.field_market_ages_lower_18
+    - field.field.node.market.field_market_ap_text
     - field.field.node.market.field_market_credits
     - field.field.node.market.field_market_demog_composition
     - field.field.node.market.field_market_devices_desktop
@@ -23,6 +24,7 @@ dependencies:
     - field.field.node.market.field_market_edu_grad_plus
     - field.field.node.market.field_market_edu_no_college
     - field.field.node.market.field_market_edu_undergrad
+    - field.field.node.market.field_market_free_text
     - field.field.node.market.field_market_gender_female
     - field.field.node.market.field_market_gender_male
     - field.field.node.market.field_market_home_own
@@ -70,7 +72,8 @@ third_party_settings:
         - field_market_state_code
         - group_dma
         - group_statistic
-        - field_market_partners_logos
+        - group_free_text
+        - group_advertising_partners
         - group_media_kit
         - group_credits
       parent_name: group_markets_tabs
@@ -150,7 +153,7 @@ third_party_settings:
       children:
         - field_market_media_kit
       parent_name: group_market
-      weight: 6
+      weight: 8
       format_type: details
       format_settings:
         id: ''
@@ -262,7 +265,7 @@ third_party_settings:
       children:
         - field_market_credits
       parent_name: group_market
-      weight: 7
+      weight: 9
       format_type: details
       format_settings:
         id: ''
@@ -270,6 +273,31 @@ third_party_settings:
         open: false
         required_fields: true
       label: Credits
+    group_free_text:
+      children:
+        - field_market_free_text
+      parent_name: group_market
+      weight: 5
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: 'Free Text'
+    group_advertising_partners:
+      children:
+        - field_market_ap_text
+        - field_market_partners_logos
+      parent_name: group_market
+      weight: 6
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: 'Advertising Partners'
 id: node.market.default
 targetEntityType: node
 bundle: market
@@ -329,6 +357,14 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: number
+    region: content
+  field_market_ap_text:
+    weight: 58
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textarea
     region: content
   field_market_credits:
     weight: 56
@@ -415,6 +451,14 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: number
+    region: content
+  field_market_free_text:
+    weight: 57
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textarea
     region: content
   field_market_gender_female:
     weight: 23
@@ -518,7 +562,7 @@ content:
     type: number
     region: content
   field_market_partners_logos:
-    weight: 5
+    weight: 59
     settings:
       entity_browser: images
       field_widget_display: label
