--- a/source/drupal/var/drupal-config/sync/core.entity_view_display.node.market.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_view_display.node.market.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.market.field_market_ages_55_64
     - field.field.node.market.field_market_ages_65_plus
     - field.field.node.market.field_market_ages_lower_18
+    - field.field.node.market.field_market_ap_text
     - field.field.node.market.field_market_credits
     - field.field.node.market.field_market_demog_composition
     - field.field.node.market.field_market_devices_desktop
@@ -22,6 +23,7 @@ dependencies:
     - field.field.node.market.field_market_edu_grad_plus
     - field.field.node.market.field_market_edu_no_college
     - field.field.node.market.field_market_edu_undergrad
+    - field.field.node.market.field_market_free_text
     - field.field.node.market.field_market_gender_female
     - field.field.node.market.field_market_gender_male
     - field.field.node.market.field_market_home_own
@@ -112,6 +114,13 @@ content:
       prefix_suffix: true
     third_party_settings: {  }
     type: number_integer
+    region: content
+  field_market_ap_text:
+    weight: 152
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: basic_string
     region: content
   field_market_credits:
     weight: 150
@@ -220,6 +229,13 @@ content:
       prefix_suffix: true
     third_party_settings: {  }
     type: number_integer
+    region: content
+  field_market_free_text:
+    weight: 151
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: basic_string
     region: content
   field_market_gender_female:
     weight: 116
