Updated migration of partners logos

--- a/source/drupal/docroot/modules/custom/spectrum_markets_map/config/install/migrate_plus.migration.markets.yml
+++ b/source/drupal/docroot/modules/custom/spectrum_markets_map/config/install/migrate_plus.migration.markets.yml
@@ -110,11 +110,16 @@ process:
     source: DMAvideo
     message: 'Field field_name is missing'
 
-  field_market_partners_logos/target_id:
-    plugin: skip_on_empty_null
-    method: process
-    source: partners_logos
-    message: 'Field field_name is missing'
+  field_market_partners_logos:
+    -
+      plugin: skip_on_empty_null
+      method: process
+      source: partners_logos
+      message: 'Field field_name is missing'
+    -
+      plugin: explode
+      delimiter: ','
+      source: partners_logos
 
   field_market_households:
     -
