--- a/source/drupal/var/drupal-config/sync/core.extension.yml
+++ b/source/drupal/var/drupal-config/sync/core.extension.yml
@@ -64,6 +64,7 @@ module:
   search_api: 0
   search_api_db: 0
   serialization: 0
+  spectrum_alter_autocomplete: 0
   spectrum_markets_map: 0
   spectrum_rest: 0
   spectrum_settings: 0
