Ready #667: Added import logic for Similar networks

--- a/source/drupal/docroot/modules/custom/spectrum_shows_import/config/install/migrate_plus.migration.network_node.yml
+++ b/source/drupal/docroot/modules/custom/spectrum_shows_import/config/install/migrate_plus.migration.network_node.yml
@@ -28,6 +28,10 @@ source:
       name: Description
       label: 'Description'
       selector: Description
+    -
+      name: Similar
+      label: 'Similar'
+      selector: Similar
 
   ids:
     Stationnum:
@@ -57,6 +61,16 @@ process:
   uid:
     plugin: default_value
     default_value: 1
+
+  field_network_similar_networks:
+    plugin: sub_process
+    source: Similar
+    process:
+     target_id:
+       plugin: migration_lookup
+       no_stub: true
+       migration: network_node
+       source: Id
 
 destination:
   plugin: 'entity:node'
