--- a/source/drupal/composer.json
+++ b/source/drupal/composer.json
@@ -63,7 +63,8 @@
         "drupal/migrate_tools": "4.x-dev",
         "drupal/migrate_source_csv": "^2.1",
         "drupal/image_effects": "^2",
-        "drupal/media_entity_image": "^1.3"
+        "drupal/media_entity_image": "^1.3",
+        "drupal/entity_update": "^1.2@RC"
     },
     "repositories": {
         "mediamonks-drupal-decoupled": {
@@ -97,10 +98,6 @@
         "composer": {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
-        },
-        "phpmssql": {
-            "type": "git",
-            "url": "https://monkjason:3z5P0lWtNFpKtYWiTmbz53K6B0xd5l2dsEiaD3o2tJ6mMl8Op4R@gitlab.com/david-garcia-garcia/mssql.git"
         }
     },
     "minimum-stability": "dev",
